# InfinityCAD

./: .gitignore  CMakeLists.txt  README.md  README.txt  makefile
apps/editor/: editor.pro  glwidget.cpp  mainwindow.ui
apps/editor_qt/build-editor-Desktop_Qt_5_5_1_GCC_64bit-Profile/: Makefile  editor  editor.debug  moc_mainwindow.cpp  ui_mainwindow.h
apps/editor_qt/editor/: allobjectstreemanager.h  allobjecttreecreator.cpp  editor.pro  editor.pro.user.fW2428  editor_window.cpp  editor_window.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  objecttreewidget.cpp  objecttreewidget.h
apps/editor_qt/editor/context_menus/: context_menu.cpp  context_menu.h  context_menu_settings.cpp  context_menu_settings.h  handler.cpp  handler.h  scene_cm_handler.cpp  scene_cm_handler.h  scene_context_menu.cpp  scene_context_menu.h
apps/editor_qt/editor/system/: ic_names.cpp  ic_names.h  object_manager.cpp  object_manager.h
apps/ifc_editor_qt/: InfinityCAD.pro  Makefile  mainwindow.ui  objects_dialog.ui  run_build.sh
apps/ifc_editor_qt/include/: editor_window.h
apps/ifc_editor_qt/include/context_menus/: handler.h
apps/ifc_editor_qt/include/system/: object_manager.h
apps/ifc_editor_qt/qdarkstyle/: style.qss
apps/ifc_editor_qt/resources/: icons.qrc
apps/ifc_editor_qt/src/: editor_window.cpp  editor_window.h  glwidget.cpp  glwidget.h  main.cpp  objects_dialog.cpp  objects_dialog.h
apps/ifc_editor_qt/src/context_menus/: context_menu.cpp  context_menu.h  handler.cpp  scene_cm_handler.cpp  scene_cm_handler.h  scene_context_menu.cpp  scene_context_menu.h
apps/ifc_editor_qt/src/dialogs/: intersectiondialog.cpp  intersectiondialog.h  intersectiondialog.ui  surface_c0_dialog.cpp  surface_c0_dialog.h  surface_c0_dialog.ui  surface_c0_rect_dialog.cpp  surface_c0_rect_dialog.h  surface_c0_rect_dialog.ui  surface_settings_dialog.cpp  surface_settings_dialog.h  surface_settings_dialog.ui
apps/ifc_editor_qt/src/plot/: plot_style.cpp  plot_style.h
apps/ifc_editor_qt/src/system/: ic_names.cpp  ifc_types.cpp  ifc_types.h  object_manager.cpp  object_manager.h
apps/raycasting_qt/editor/: editor.pro  glwidget.cpp  glwidget.h  mainwindow.h  mainwindow.ui
doc/: DEV.txt
doc/main_doc/: mg.tex
libs/error/test/: makefile
libs/fitting/: INSTALL.txt
libs/fitting/include/fitting/: cloud_fitter.h
libs/fitting/make/: make_external_config.sh  makefile  proj_config.sh
libs/fitting/src/fitting/: cloud_fitter.cpp
libs/fitting/test/: makefile
libs/geometry/include/: drawer.h
libs/geometry/include/geometry/: camera.h  edge.h  mat4.h  object.h  renderable.h  vec4.h
libs/geometry/make/: make_external_config.sh  proj_config.sh
libs/geometry/src/: drawer.cpp
libs/geometry/src/geometry/: camera.cpp  edge.cpp  mat4.cpp  object.cpp  projection.cpp  renderable.cpp
libs/geometry/test/: makefile
libs/geometry/test/src/: camera_test.cpp
libs/glm/make/: proj_config.sh
libs/gm/: INSTALL.txt
libs/gm/include/gm/: edge.h  object.h  projection.h  rigid_body.h  utils.h
libs/gm/make/: make_external_config.sh
libs/gm/src/gm/: angle_to_radians.cpp  edge.cpp  object.cpp  projection.cpp  rigid_body.cpp  utils.cpp
libs/gm/test/: makefile
libs/gm/test/src/: camera_test.cpp
libs/googletest/make/: sample1_unittest
libs/ifc_gpu/include/ifc_gpu/: common.h
libs/ifc_gpu/make/: makefile  proj_config.sh
libs/ifc_gpu/test/: makefile
libs/infinity_cad/: INSTALL.txt
libs/infinity_cad/include/infinity_cad/: object.h  object_types.h  rigid_object.h
libs/infinity_cad/make/: make_external_config.sh  makefile  proj_config.sh  run_make_external.sh
libs/infinity_cad/src/infinity_cad/: object.cpp  object_types.cpp  rigid_object.cpp
libs/infinity_cad/test/: makefile
libs/infinity_cad/test/src/: math_test.cpp  quaternion_test.cpp
libs/logger/test/: makefile
libs/math/include/math/: matrix.h
libs/math/src/math/: matrix.cpp  point.cpp
libs/parallel/include/threading/: thread_util.h
libs/parallel/src/threading/: thread_util.cpp
libs/pso/include/pso/: fitness_updater.h  particle_factory.h  pso.h
libs/pso/src/pso/: fitness_updater.cpp  particle_factory.cpp  pso.cpp
libs/pso/test/: makefile
libs/rc/: INSTALL.txt
libs/rc/include/rc/: ellipsoid.h  ray.h
libs/rc/make/: make_external_config.sh  proj_config.sh
libs/rc/test/: makefile
libs/strings/include/: string_utils.h
libs/strings/src/: string_utils.cpp
res/: ciecierskij.mg
res/archive/: ciecierskij.mg  ciecierskij_model_last.mg  ciecierskij_model_new.mg  ciecierskij_model_wrong_shark.mg
(+312 files in other folders)
